# cooperativelib

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: coroutine.hpp  corutine.hpp  event_loop.hpp  function.hpp  future.hpp  future_awaiter.hpp
tests/: CMakeLists.txt  coroutines_test.cpp  corutines_test.cpp  event_loop_coroutine_test.cpp  event_loop_test.cpp  future_awaiter_test.cpp  future_test.cpp
