add_executable(future-test future_test.cpp)
add_executable(event-loop-test event_loop_test.cpp)
add_executable(coroutines-test coroutines_test.cpp)
add_executable(future-awaiter-test future_awaiter_test.cpp)
add_executable(event-loop-coroutine-test event_loop_coroutine_test.cpp)

add_test(NAME future-test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/future-test)
add_test(NAME event-loop-test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/event-loop-test)
add_test(NAME coroutines-test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/coroutines-test)
add_test(NAME future-awaiter-test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/future-awaiter-test)
add_test(NAME event-loop-coroutine-test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/event-loop-coroutine-test)

target_link_libraries(future-test unittest cooperative)
target_link_libraries(event-loop-test unittest cooperative)
target_link_libraries(coroutines-test unittest cooperative)
target_link_libraries(future-awaiter-test unittest cooperative)
target_link_libraries(event-loop-coroutine-test unittest cooperative)

if(MSVC)
    target_compile_options(future-test PRIVATE /W4 /WX)
    target_compile_options(event-loop-test PRIVATE /W4 /WX)
    target_compile_options(coroutines-test PRIVATE /W4 /WX)
    target_compile_options(future-awaiter-test PRIVATE /W4 /WX)
    target_compile_options(event-loop-coroutine-test PRIVATE /W4 /WX)
else()
    target_compile_options(future-test PRIVATE -Wall -Wextra -Werror -Wno-maybe-uninitialized -Wno-unknown-warning-option)
    target_compile_options(event-loop-test PRIVATE -Wall -Wextra -Werror -Wno-maybe-uninitialized -Wno-unknown-warning-option)
    target_compile_options(coroutines-test PRIVATE -Wall -Wextra -Werror -Wno-maybe-uninitialized -Wno-unknown-warning-option)
    target_compile_options(future-awaiter-test PRIVATE -Wall -Wextra -Werror -Wno-maybe-uninitialized -Wno-unknown-warning-option)
    target_compile_options(event-loop-coroutine-test PRIVATE -Wall -Wextra -Werror -Wno-maybe-uninitialized -Wno-unknown-warning-option)
endif()
